// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button snapshots should render as type reset 1`] = `
.c0 {
  border: 0;
  outline: none;
  text-align: center;
  color: white;
  background-color: dodgerblue;
  padding: 0.8rem;
  border-radius: 4px;
}

<button
  class="Button___StyledStyledButton-w4d9ie-0 c0"
  data-testid="testid.button"
  type="reset"
>
  test
</button>
`;

exports[`Button snapshots should render as type submit 1`] = `
.c0 {
  border: 0;
  outline: none;
  text-align: center;
  color: white;
  background-color: dodgerblue;
  padding: 0.8rem;
  border-radius: 4px;
}

<button
  class="Button___StyledStyledButton-w4d9ie-0 c0"
  data-testid="testid.button"
  type="submit"
>
  test
</button>
`;

exports[`Button snapshots should render default 1`] = `
.c0 {
  border: 0;
  outline: none;
  text-align: center;
  color: white;
  background-color: dodgerblue;
  padding: 0.8rem;
  border-radius: 4px;
}

<button
  class="Button___StyledStyledButton-w4d9ie-0 c0"
  data-testid="testid.button"
  type="button"
>
  test
</button>
`;

exports[`Button snapshots should render disabled 1`] = `
.c0 {
  border: 0;
  outline: none;
  text-align: center;
  color: white;
  background-color: dodgerblue;
  padding: 0.8rem;
  border-radius: 4px;
}

<button
  class="Button___StyledStyledButton-w4d9ie-0 c0"
  data-testid="testid.button"
  disabled=""
  type="button"
>
  test
</button>
`;
